--- a/scss/main.scss
+++ b/scss/main.scss
@@ -154,11 +154,14 @@ html, body {
 
 .sidebar-sub-navigation-item {
 	cursor: pointer;
-	padding: 8px 0 5px 25px;
+	padding: 8px 0 5px 23px;
 }
 
 .sidebar-sub-navigation-item-header {
 	color: #525252;
+}
+
+.notifications {
 }
 
 //
